--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "aqua-plus",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://SavrabhSngh.github.io/aqua-plus/",
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
